--- a/03_Second_Stage/Generate database/1.pca/03_02_process_dim_by_pca.Rmd
+++ b/03_Second_Stage/Generate database/1.pca/03_02_process_dim_by_pca.Rmd
@@ -124,6 +124,9 @@ economic.pca_1                       <- prcomp(social.dets     %>%
 economic.pca_2                       <- prcomp(social.dets     %>% 
                                         select(pr_insu, pr_pov_2018, pr_no_trabajo_pago), center = TRUE,scale. = TRUE) 
 
+economic.pca_6                       <- prcomp(social.dets     %>% 
+                                        select(pr_pov_2018, pr_NBI), center = TRUE,scale. = TRUE) 
+
 house.characteristics.pca_1          <- prcomp(social.dets     %>% 
                                         select(INEI_prop_Nopared_ladrillo_cemento, INEI_prop_No_techo_concreto,   
                                                INEI_prop_Nopiso_cemento_loseta), center = TRUE,scale. = TRUE)
@@ -137,6 +140,13 @@ health.pop.status.pca_1              <- prcomp(social.dets.dep %>%
 
 health.pop.status.pca_2              <- prcomp(social.dets.dep %>% 
                                         select(pr_diab, pr_obes, pr_tos, pr_smoke), center = TRUE,scale. = TRUE)
+
+health.pop.status.pca_6              <- prcomp(social.dets.dep %>% 
+                                        select(pr_tos, pr_smoke), center = TRUE,scale. = TRUE)
+
+health.pop.status.pca_7              <- prcomp(social.dets.dep %>% 
+                                        select(pr_tos, pr_obes), center = TRUE,scale. = TRUE)
+
 
 health.system.status.pca_1           <- prcomp(social.dets.dep %>% 
                                         select(med_x_100, enf_x_100,
@@ -252,12 +262,15 @@ summary(dynamic.population.pca_1)
 summary(dynamic.population.pca_2)
 summary(economic.pca_1)
 summary(economic.pca_2)
-summary(health.performance.pca_1)
-summary(health.performance.pca_2)
-summary(health.status.pca_1)
-summary(health.status.pca_2)
+summary(economic.pca_6)
 summary(house.characteristics.pca_1)
 summary(house.characteristics.pca_2)
+summary(health.pop.status.pca_1)
+summary(health.pop.status.pca_2)
+summary(health.pop.status.pca_6)
+summary(health.pop.status.pca_7)
+summary(health.system.status.pca_1)
+summary(health.system.status.pca_2)
 ```
 
 
@@ -347,6 +360,11 @@ economic_dim_2                  <-  economic.pca_2$x %>%
                                     select(PC1) %>% 
                                     dplyr::rename(economic_dim_2  = PC1)
 
+economic_dim_6                  <-  economic.pca_6$x %>% 
+                                    as.data.frame() %>% 
+                                    select(PC1) %>% 
+                                    dplyr::rename(economic_dim_6  = PC1)
+
 house_charact_dim_1             <-  house.characteristics.pca_1$x %>% 
                                     as.data.frame() %>% 
                                     select(PC1) %>% 
@@ -369,6 +387,16 @@ health_population_status_dim_2  <-  health.pop.status.pca_2$x %>%
                                     select(PC1)  %>% 
                                     dplyr::rename(health_population_status_dim_2 = PC1)
 
+health_population_status_dim_6  <-  health.pop.status.pca_6$x %>% 
+                                    as.data.frame() %>% 
+                                    select(PC1)  %>% 
+                                    dplyr::rename(health_population_status_dim_6 = PC1)
+
+health_population_status_dim_7  <-  health.pop.status.pca_7$x %>% 
+                                    as.data.frame() %>% 
+                                    select(PC1)  %>% 
+                                    dplyr::rename(health_population_status_dim_7 = PC1)
+
 
 health_system_status_dim_1      <-  health.system.status.pca_1$x %>% 
                                     as.data.frame() %>% 
@@ -382,18 +410,21 @@ health_system_status_dim_2      <-  health.system.status.pca_2$x %>%
 
 
 
-social.dets.pca <- left_join( cbind(social.dets, dynamic_population_dim_1, dynamic_population_dim_2, economic_dim_1, economic_dim_2, house_charact_dim_1, house_charact_dim_2) ,
-                              cbind(health_population_status_dim_1,health_population_status_dim_2, health_system_status_dim_1, health_system_status_dim_2,
+social.dets.pca <- left_join( cbind(social.dets, dynamic_population_dim_1, dynamic_population_dim_2, economic_dim_1, economic_dim_2, economic_dim_6,
+                                    house_charact_dim_1, house_charact_dim_2) ,
+                              cbind(health_population_status_dim_1,health_population_status_dim_2, health_population_status_dim_6, health_population_status_dim_7,    
+                                    health_system_status_dim_1, health_system_status_dim_2, 
                                     social.dets.dep %>%  dplyr::select(dep, health_population_status_dim_3, health_population_status_dim_4, health_population_status_dim_5, 
                                                                        health_system_status_dim_3, health_system_status_dim_4, health_system_status_dim_5) ) ,
                               by = c("dep" = "dep") ) %>% 
                    dplyr::select(dep, prov, 
                                  education_dim, demographics_dim, 
                                  dynamic_population_dim_1, dynamic_population_dim_2, 
-                                 economic_dim_1, economic_dim_2, economic_dim_3, economic_dim_4, economic_dim_5,
+                                 economic_dim_1, economic_dim_2, economic_dim_3, economic_dim_4, economic_dim_5, economic_dim_6,
                                  house_charact_dim_1, house_charact_dim_2,
                                  health_population_status_dim_1, health_population_status_dim_2, health_population_status_dim_3, health_population_status_dim_4,
-                                 health_population_status_dim_5, health_system_status_dim_1, health_system_status_dim_2, health_system_status_dim_3, 
+                                 health_population_status_dim_5, health_population_status_dim_6, health_population_status_dim_7,
+                                 health_system_status_dim_1, health_system_status_dim_2, health_system_status_dim_3, 
                                  health_system_status_dim_4, health_system_status_dim_5)
                             
 
@@ -412,6 +443,7 @@ saveRDS(social.dets.pca, file.path(output, "social_dets_pca.rds"))
 
 ```
 
+`
 
 # Final database
 
